--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ openai==0.28.0
 requests==2.28.1
 pandas==1.5.3
 numpy==1.24.2
-sentence-transformers==2.2.0
-sklearn==1.0.2
+sentence-transformers==2.2.2
+scikit-learn==1.0.2
 faiss-cpu==1.7.4
-streamlit==1.17.1
+streamlit==1.27.2
 fuzzywuzzy==0.18.0
